# 網易雲音樂導航條完成

--- a/front-end/vue-swiper/html/music163-top.html
+++ b/front-end/vue-swiper/html/music163-top.html
@@ -37,13 +37,24 @@
                 </ul>
             </div>
             <div class="topbar-right">
-                <input type="text">
-                <span>創作者中心</span>
-                <a href="#">登錄</a>
+                <div class="search">
+                    <input type="text" placeholder="音樂/視頻/電台">
+                    
+                </div>
+                <div class="author"><a href="">創作者中心</a></div>
+                <div class="login"><a href="">登錄</a></div>
+                
             </div>
         </div>
         <div class="topnav">
-
+            <div class="container">
+                <div class="item spec-active"><a href="#">推薦</a></div>
+                <div class="item"><a href="#">排行榜</a></div>
+                <div class="item"><a href="#">歌單</a></div>
+                <div class="item"><a href="#">播客</a></div>
+                <div class="item"><a href="#">歌手</a></div>
+                <div class="item"><a href="#">新碟上架</a></div>
+            </div>
         </div>
     </div>
 </body>
